test/src/e2e_vm_tests/test_programs/should_fail/asm_should_not_have_return/src/main.sw
script;

fn main() {
  // this asm block should return unit, i.e. nothing
  asm(r1: 5) {
    r1: u64
  }
}
